Enable buildConfig and add buildConfigField rule

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+        buildConfigField "String", "GITHUB_API", "\"https://api.github.com/\""
     }
 
     buildTypes {
@@ -34,6 +36,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 }
 
