--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,11 @@ android {
         versionCode 1
         versionName "1.0"
 
+        multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        buildConfigField "String", "GITHUB_API", "\"YOUR_TOKEN\""
+        buildConfigField "String", "GITHUB_API", "\"token YOUR_TOKEN_HERE\""
     }
 
     buildTypes {
@@ -61,6 +63,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'androidx.multidex:multidex:2.0.1'
     kapt "androidx.room:room-compiler:2.6.0-alpha01"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
